--- a/week5/index.html
+++ b/week5/index.html
@@ -102,8 +102,8 @@
       </div>
 
       <div class="aside">
-        <aside>
-          <h2>Наши врачи</h2>
+        <h2 class="aside_titel">Наши врачи</h2>
+        <aside class="aside_wrapper">
           <div class="aside_item">
             <img src="assets/doc1.png" alt="doc1" />
 
