--- a/week5/index.html
+++ b/week5/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <nav class="menu_item">
-        <a href="tel:+">Тел..+7-495-495-995</a>
+        <a href="tel:+">Тел.+7-495-495-495</a>
         <a href="#">О КЛИНИКЕ</a>
         <a href="#">ЛЕЧЕНИЕ</a>
         <a href="#">СТАТЬИ</a>
@@ -130,7 +130,7 @@
       <address class="address">
         <p>Наши контакты:</p>
         <p>Москва, ул.Садовая 106/16</p>
-        <p>Тел..+7-495-495-95-95</p>
+        <p>Тел.+7-495-495-495</p>
       </address>
       <nav class="footer_item">
         <a href="#">Отзывы</a>
