--- a/week7/task1/index.html
+++ b/week7/task1/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <nav class="menu_item">
-        <a href="tel:+">Тел.+7-495-495-495</a>
+        <a href="tel:+7-495-495-495">Тел.+7-495-495-495</a>
         <a href="#">О КЛИНИКЕ</a>
         <a href="#">ЛЕЧЕНИЕ</a>
         <a href="#">СТАТЬИ</a>
