--- a/week8/task2/page_2.html
+++ b/week8/task2/page_2.html
@@ -120,7 +120,7 @@
 
       <footer class="footer">
         <nav class="footer_nav">
-          <a class="link" href="page_2.html">Возможности</a>
+          <a class="link" href="index.html">Home</a>
           <a class="link" href="#">Где купить</a>
           <a class="link" href="#">Доставка</a>
           <a class="link" href="#">Помощь</a>
