--- a/week13-JS/index.html
+++ b/week13-JS/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-    
-<button onclick="showMessage()" class="hello btn">PRESS ME</button>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h2>Task 1</h2>
 
+      <button onclick="showMessage()" class="hello btn">PRESS ME</button>
 
-<button onclick="add()" class="btn">Сложение (+)</button>
+      <br />
+      <h2>Task 2</h2>
+      <button onclick="add()" class="btn">Сложение (+)</button>
 
-<button onclick="minus()" class="btn">Вычетание (-)</button>
+      <button onclick="minus()" class="btn">Вычетание (-)</button>
 
-<button onclick="multiply()" class="btn">Умножение (*)</button>
+      <button onclick="multiply()" class="btn">Умножение (*)</button>
 
-<button onclick="divide()" class="btn">Деление (/)</button>
-
-
-
+      <button onclick="divide()" class="btn">Деление (/)</button>
+    </div>
 
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
