--- a/week15-JS/index.html
+++ b/week15-JS/index.html
@@ -87,7 +87,7 @@
       <div id="errorForm"></div>
       <div id="welcome"></div>
 
-      <button id="cta" onclick="check()">Register</button>
+      <button type="button" id="cta" onclick="check()">Register</button>
     </form>
     <br />
     <br />
