--- a/week16-JS/index.html
+++ b/week16-JS/index.html
@@ -43,16 +43,16 @@
         <div class="form__item">
           <p>Karosserieform</p>
           <label for="model">
-            <select  id="" class="extra">
-              <option  name="karosserie" value="0">Bitte wählen</option>
-              <option name="karosserie" value="500">Kleinwagen</option>
-              <option name="karosserie" value="600">Limousine</option>
-              <option name="karosserie" value="700">Kombi</option>
-              <option name="karosserie" value="800">Cabrio</option>
-              <option name="karosserie" value="900">Coupe</option>
-              <option name="karosserie" value="1000">SUV/ Geländewagen</option>
-              <option name="karosserie" value="1000">Van/ Kleinbus</option>
-              <option name="karosserie" value="1200">Transporter</option>
+            <select  name="karosserie" id="karosserie" class="extra">
+              <option  value="0">Bitte wählen</option>
+              <option  value="500">Kleinwagen</option>
+              <option  value="600">Limousine</option>
+              <option  value="700">Kombi</option>
+              <option  value="800">Cabrio</option>
+              <option  value="900">Coupe</option>
+              <option  value="1000">SUV/ Geländewagen</option>
+              <option  value="1000">Van/ Kleinbus</option>
+              <option  value="1200">Transporter</option>
             </select>
           </label>
           </div>
