--- a/week18-JS/index.html
+++ b/week18-JS/index.html
@@ -194,7 +194,23 @@
     </form>
     <br />
 
-    <form action=""></form>
+    <form class="task3" id="task3">
+      <h2 class="heading">Task3</h2>
+      <div class="content">
+        <label for="logIn"> Your Name <br /></label>
+        <input type="text" id="logIn" />
+        <button class="btn" id="remember">Remember me</button>
+        <div class="output" id="output"></div>
+        <textarea
+          type="text"
+          id="text"
+          class="textarea"
+          placeholder="Write your message here..."
+        ></textarea>
+        <button class="btn" type="button" id="button3">Send</button>
+      </div>
+    </form>
+
     <script src="index.js"></script>
   </body>
 </html>
