--- a/week18-JS/index.html
+++ b/week18-JS/index.html
@@ -34,7 +34,7 @@
         <legend>Владелец/ Владелица:</legend>
                 
         <div>
-          <label for="name">Имя владельца</label>
+          <label for="name1">Имя владельца</label>
            <input
             class="inputheight"
             type="text"
@@ -46,7 +46,7 @@
         </div>
                 
         <div>
-          <label for="tel">Номер телефона </label>
+          <label for="tel1">Номер телефона </label>
           <input
             type="tel"
             name="tel"
@@ -58,7 +58,7 @@
         </div>
                 
         <div>
-          <label for="email">Электронная почта</label>
+          <label for="email1">Электронная почта</label>
           <input
             type="email"
             name="email"
