--- a/week21-JS/Task2-3/index.html
+++ b/week21-JS/Task2-3/index.html
@@ -11,7 +11,7 @@
   <body>
     <h2>Task 2</h2>
 
-    <form class="form" action="#" method="post" name="registration">
+    <form class="form" action="#" method="post" id="registration">
       <label for="name"
         >Your First Name<br />
         <input class="input" type="text" id="name" />
@@ -206,7 +206,9 @@
         <label for="photo">Фото Вашего питомца</label>
         <input type="file" name="photo" id="photo" />     
       </div>
-      <br />      
+      <br />  
+      <div id="saved"></div>
+          
       <div>
         <button class="btn" id="button_one" type="submit">Сохранить</button>
       </div>
