--- a/week22-JS/Task2/index.html
+++ b/week22-JS/Task2/index.html
@@ -14,6 +14,11 @@
       <div class="chart">
         <canvas id="myChart" width="850" height="400"></canvas>
       </div>
+      <p>
+        Данный график показывает распределение моего времени за последнюю неделю
+        между работой, курсом и занятиями спортом. Из полученных данных очень
+        хорошо видно, насколько насыщенная моя жизнь в данный момент ;-))
+      </p>
     </div>
     <script src="bundle.js"></script>
   </body>
