--- a/Project_test/index.html
+++ b/Project_test/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icon.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -13,8 +14,13 @@
       <p class="par"></p>
 
       <div class="btn">
-        <a href="page_2.html"><img src="assets/right.gif" alt="" /></a>
+        <a href="page_2.html"
+          ><img src="assets/right.gif" class="btn_pic" alt=""
+        /></a>
       </div>
+      <audio id="player" autoplay loop>
+        <source src="assets/harry_potter.mp3" type="audio/mp3" />
+      </audio>
     </div>
     <script src="index.js"></script>
   </body>
