--- a/Project_test/page_3.html
+++ b/Project_test/page_3.html
@@ -20,6 +20,8 @@
       </div>
 
       <div class="rules">
+        <p id="greeting"></p>
+
         <p>
           Ты готов к новым испытаниям? У тебя есть всего 5 минут чтобы отгадать
           героев. Нажимай на кнопку и время начнёт свой отсчёт.<br />
@@ -43,8 +45,10 @@
           </div>
         </div>
         <div class="a_btn">
-          <img src="assets/mini_dobby_7.png" alt="" />
-          <a href="index.html"
+          <a href="page_2.html"
+            ><img src="assets/left.gif" class="btn_pic" alt=""
+          /></a>
+          <a href="page_5.html"
             ><img src="assets/right.gif" class="btn_pic" alt=""
           /></a>
         </div>
